# intelligence-service-backend

./: .gitignore  docker-compose.yml  start-dev.sh
api-gateway/: .env  Dockerfile  pyproject.toml  requirements.txt
api-gateway/app/: main.py
api-gateway/app/api/: router.py
api-gateway/app/core/: config.py  logging.py
api-gateway/app/utils/: errors.py  rate_limiting.py
api_gateway/: docker-compose.yml
api_gateway/app/: init.py  main.py
api_gateway/app/core/: config.py  middleware.py
api_gateway/app/utils/: telemetry.py
auth-service/: .env.example
auth-service/alembic/versions/: 001_initial_migration.py
auth-service/app/: main.py
auth-service/app/api/: router.py
auth-service/app/api/endpoints/: auth.py
auth-service/app/core/: config.py  security.py
auth-service/app/crud/: user.py
auth-service/app/db/: base.py  init_db.py
auth-service/app/schemas/: auth.py  user.py
auth-service/app/services/: auth_service.py
reports-service/: Dockerfile  requirements.txt
reports-service/app/api/: deps.py
reports-service/app/core/: logging.py
reports-service/app/crud/: report.py
reports-service/app/db/: init_db.py
reports-service/app/models/: attachment.py  comment.py  report.py
reports-service/app/schemas/: attachment.py  report.py
services/audit_service/: docker-compose.yml
services/auth_service/: Dockerfile  pyproject.toml
services/auth_service/alembic/: env.py
services/auth_service/app/: init.py
services/auth_service/app/api/: deps.py
services/auth_service/app/api/endpoints/: users.py
services/auth_service/app/core/: logging.py
services/auth_service/app/models/: user.py
services/map_service/: requirements.txt
services/reports_service/: pyproject.toml
services/reports_service/app/: main.py
services/reports_service/app/api/: router.py
services/reports_service/app/api/endpoints/: reports.py  tags.py
services/reports_service/app/core/: config.py
services/reports_service/app/crud/: tag.py
services/reports_service/app/db/: session.py
services/reports_service/app/schemas/: comment.py
services/reports_service/app/services/: ai_client.py  storage_service.py
